Fix remaining review issues: overflow fallback, debounce accumulation, style
1. NaturalOrderComparator: same-length >18 digit numbers now compared
   char-by-char instead of treated as equal

2. SctStartupActivity: pendingPaths accumulated across debounce window
   via ConcurrentHashMap — no more path loss on rapid multi-file changes

3. MigrateToMarkdownAction: .collect(Collectors.toList()) -> .toList(),
   removed unused Collectors import

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>